380px is phone breakpoint, must add finishing touches/paragraph details then deploy

--- a/aboutus.html
+++ b/aboutus.html
@@ -109,14 +109,14 @@
 
     
         <div class = "text-center container-fluid mt-5" id="xshidden">
-            <div class="row">
-            <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
-                <div class="card" style="width: 18rem;">
+            <div class="row" >
+            <div class="col-4 offset-2 col-xs-4 align-self-left mt-5" >
+                <div class="card" style="width: 18rem;" id="recipe1and3card">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe 1<h5>
+                      <h5 class="card-title">moocho juice recipe 1 large<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -126,7 +126,7 @@
                     <div class="card-body">
                       <h5 class="card-title">moocho juice recipe 2</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -142,7 +142,7 @@
                         <div class="card-body">
                           <h5 class="card-title">moocho juice recipe 1 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -155,7 +155,7 @@
                         <div class="card-body">
                           <h5 class="card-title">moocho juice recipe 2 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -176,12 +176,12 @@
         <div class = "text-center container-fluid mt-5" id="xshidden">
             <div class="row">
             <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;" id="recipe1and3card">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">moocho juice recipe 3<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" id="orangebutton" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -191,7 +191,7 @@
                     <div class="card-body">
                       <h5 class="card-title">moocho juice recipe 4</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -207,7 +207,7 @@
                         <div class="card-body">
                           <h5 class="card-title">moocho juice recipe 3 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary"data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                          <a href="#" class="btn btn-primary"data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -220,7 +220,7 @@
                         <div class="card-body">
                           <h5 class="card-title">moocho juice recipe 4 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1" id="orangebutton">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -234,7 +234,7 @@
                     </div>
                   </div>
                 -->
-                  <button type="button" class="btn btn-secondary offset-2 mt-3 mb-5 pt-2 pb-2 pl-2 pr-2">button g</button>
+                  <button type="button" class="btn btn-secondary offset-2 mt-3 mb-5 pt-2 pb-2 pl-2 pr-2" id="orangebutton2">button g</button>
 
             </div>
         </div>
